--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "This repository contains Rest API examples of the most used HTTP methods.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hakanguneser/node-rest-api.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "hakan.guneser@gmail.com",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/hakanguneser/node-rest-api/issues"
