--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "express": "^4.17.1",
     "mongoose": "^5.11.14",
     "node-mocks-http": "^1.10.1",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "swagger-jsdoc": "^6.0.2",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "jest": "^26.6.3",
