--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,14 @@
 version: '3.1'
 
 services:
-
+  app:
+    container_name: node-rest-api
+    restart: always
+    build: .
+    ports: 
+      - '3000:3000'
+    links: 
+      - mongo
   mongo:
     image: mongo
     container_name: 'node-project-db'
